change page iren-coll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@
         }
          @font-face {
             font-family: "Lama-sans";
-            src: url("../assets/font/LamaSans-Black.woff") format("woff");
+            src: url("../font/ArbFONTS-LamaSans-Regular.ttf") format("woff");
             
 
         }
