--- a/fire-fighting/style.css
+++ b/fire-fighting/style.css
@@ -1,7 +1,7 @@
  <style>
             @font-face {
             font-family: "Lama-sans";
-            src: url("../assets/font/LamaSans-Black.woff") format("woff");
+            src: url("../assets/font/ArbFONTS-LamaSans-Regular.ttf") format("woff");
            
             
           
